--- a/BachelorsProjectWebApp/Views/Home/FindOffice.cshtml
+++ b/BachelorsProjectWebApp/Views/Home/FindOffice.cshtml
@@ -19,7 +19,8 @@
             var outputImg = document.createElement('img');
             var rootUrl = "https://chart.googleapis.com/chart?cht=qr&chs=250x250&chl="
             //TODO Change id to be the selected office's id instead of hardcoded value 8.
-            var url = "https://bach2020.azurewebsites.net/Home/" +$(this).attr("data-floorplan")+ "?id=" + $(this).attr("id")
+            var url = "https://bach2020.azurewebsites.net/Home/" +$(this).attr("data-floorplan")+ "?destination=" + $(this).attr("id") + "," + $(this).attr("data-floorplanID")
+            console.log(url);
             var actualUrl = rootUrl + url
             console.log(table.row(this).data())
             outputImg.src = actualUrl
@@ -46,21 +47,21 @@
                 </tr>
             </thead>
             <tbody>
-                <tr id="1" data-floorplan="NavigationDemo">
+                <tr id="1" data-floorplan="NavigationDemo" data-floorplanID="1">
                     <td>Steen</td>
                     <td>Developer</td>
                     <td>Office 1</td>
                     <td>abc@def.gh</td>
                     <td style="text-align: center"><i class="fa fa-qrcode" aria-hidden="true"></i></td>
                 </tr>
-                <tr id="2" data-floorplan="NavigationDemo">
+                <tr id="2" data-floorplan="NavigationDemo" data-floorplanID="1">
                     <td>Steen</td>
                     <td>Developer</td>
                     <td>Office 2</td>
                     <td>abc@def.gh</td>
                     <td style="text-align: center"><i class="fa fa-qrcode" aria-hidden="true"></i></td>
                 </tr>
-                <tr id="3" data-floorplan="NavigationDemo">
+                <tr id="3" data-floorplan="NavigationDemo" data-floorplanID="1">
                     <td>Steen</td>
                     <td>Developer</td>
                     <td>Office 3</td>
