--- a/BachelorsProjectWebApp/Views/Home/Navigation.cshtml
+++ b/BachelorsProjectWebApp/Views/Home/Navigation.cshtml
@@ -10,12 +10,7 @@
     <canvas id="canvas1" style="position: absolute; left: 0; top: 0; z-index: -2;"></canvas>
     <canvas id="canvas2" style="position: absolute; left: 0; top: 0; z-index: -1;"></canvas>
 </div>
-<div style="display: none ">
-    <button style="height:50px;width:50px" onclick="showAndroidToast('Hello Android!')">Toast</button>
-    <button style="height:50px;width:50px" onclick="retrieveBestBeacon()">Retrieve</button>
-    <button style="height:50px;width:50px" onclick="startScanning()">Start</button>
-    <button style="height:50px;width:50px" onclick="stopScanning()">Stop</button>
-</div>
+
 <script>
 
 	var beaconObject = @Html.Raw(Json.Encode(Model.beaconlist));
@@ -74,7 +69,9 @@
 		}
 
     }
-
+	const updater = window.setInterval(function () {
+        retrieveBestBeacon();
+    }, 2000);
 
 	function startScanning() {
 		Android.startScanning();
@@ -114,7 +111,6 @@
 	function calculateOffset() {
         var scale = background.width / background.height;
         console.log(scale);
-        //ctx1.drawImage(background,0,0);
         newWidth = canvas1.width;
         newHeight = newWidth / scale;
         if (newHeight > canvas1.height) {
@@ -130,21 +126,8 @@
 		ctx1.drawImage(background, xOffset, yOffset, newWidth, newHeight);
 
 		drawTrackCircles(newWidth / 25, currentPosition, destination);
-		//drawBeaconCircles(newWidth / 35);
-		//drawCircles(xOffset + newWidth / 5, newHeight / 8, 4, newWidth / 25, currentPosition, destination);
 	}
 
-	function up() {
-		console.log("up");
-		currentPosition--;
-		drawVisuals(currentPosition, destination);
-	}
-
-	function down() {
-		console.log("down");
-		currentPosition++;
-		drawVisuals(currentPosition, destination);
-	}
 
 	function drawBeaconCircles(circleRadius) {
         var canvas2 = document.getElementById("canvas2")
